<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_accumulation">

    <fragment
        android:id="@+id/goalFragment"
        android:name="com.darkman.wallet_3.ui.accumulation.GoalFragment">
        <argument
        android:name="balance_data"
        app:argType="com.darkman.wallet_3.ui.accumulation.Balance" />
    </fragment>

    <fragment
        android:id="@+id/navigation_accumulation"
        android:name="com.darkman.wallet_3.ui.accumulation.AccuFragment"
        android:label="@string/accumulation"
        tools:layout="@layout/fragment_accu" >
        <action
            android:id="@+id/action_accu_to_goal"
            app:destination="@id/goalFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.darkman.wallet_3.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.darkman.wallet_3.ui.notifications.SettingFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_setting" />
</navigation>