<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:backgroundTint="?colorPrimary"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_marginStart="7dp"
                android:layout_marginVertical="7dp"
                android:layout_marginEnd="2dp"
                android:orientation="vertical"
                android:background="@drawable/container_style"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_score"
                    android:textSize="26sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center" />
            </LinearLayout>

            <ImageButton
                android:backgroundTint="?colorPrimary"
                android:id="@+id/close_bt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:layout_marginVertical="7dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:background="@drawable/container_style"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_close"
                app:tint="@color/red"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>
        <EditText
            android:importantForAutofill="no"
            android:inputType="number"
            android:id="@+id/score_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/number_hint"
            android:layout_marginHorizontal="7dp"/>
            <LinearLayout
                android:layout_marginHorizontal="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/remove_bt"
                    android:backgroundTint="@color/red_variant"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:layout_marginEnd="2dp"
                    android:text="@string/remove"/>
                <Button
                    android:backgroundTint="@color/green_1"
                    android:id="@+id/add_bt"
                    android:layout_marginStart="2dp"
                    android:layout_width="0dp"
                    android:textColor="@color/white"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/add"/>
            </LinearLayout>
        <Button
            android:id="@+id/set_bt"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="7dp"
            android:text="@string/set_score"/>
</LinearLayout>