<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/title_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:backgroundTint="?colorPrimary"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_marginStart="7dp"
            android:layout_marginVertical="7dp"
            android:layout_marginEnd="2dp"
            android:orientation="vertical"
            android:background="@drawable/container_style"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_score"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_gravity="center" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/close_bt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="7dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:background="@drawable/container_style"
            android:backgroundTint="?colorPrimary"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_close"
            app:tint="@color/red"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/title_bar"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:layout_marginHorizontal="10dp"
            android:textSize="18sp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fromMenu1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:hint="@string/action_choose_one"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/fromMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/To"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/toMenu1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:hint="@string/action_choose_one"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/toMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/number_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/value_text"
                android:layout_width="match_parent"
                android:inputType="number"
                android:hapticFeedbackEnabled="true"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/doneButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/done"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>